# Termgotchi

./: README.md  pyproject.toml
serverpet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
termgotchi/: __init__.py  __main__.py
